# Sparkle

./: .gitignore  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
sparkle/: simpleauth.py
