[tool.poetry]
name = "sparkle"
version = "0.1.0"
description = ""
authors = ["Quan Nguyen <quannguyen2281995@gmail.com>"]
license = "AGPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
streamlit-audiorec = "^0.1.3"
openai = "^1.44.0"
streamlit-lottie = "^0.0.5"
streamlit-extras = "^0.4.7"
streamlit-chat = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
